[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/fonts/MainFont.tres" type="DynamicFontData" id=1]
[ext_resource path="res://resources/fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/multiplayer/MultiplayerScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SearchingText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "searching." ]
}

[sub_resource type="Animation" id=6]
resource_name = "SearchingAnimation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SearchingText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "searching", "searching.", "searching..", "searching...", "searching..." ]
}

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="Multiplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -2500.0
margin_top = -2500.0
margin_right = 2500.0
margin_bottom = 2500.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = -200.0
margin_right = 147.5
margin_bottom = -150.0
custom_fonts/font = ExtResource( 2 )
text = "servers"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -100.0
margin_right = 82.0
margin_bottom = -39.0
custom_constants/separation = 15

[node name="TryAgain" type="Button" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "try again"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 164.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "back"

[node name="SearchingText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -12.5
margin_right = 90.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 5 )
text = "searching."

[node name="ServersIP" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="ServersIP"]
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="SearchingAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/SearchingAnimation = SubResource( 6 )

[node name="NotFoundServer" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.5
margin_top = -8.5
margin_right = 93.5
margin_bottom = 8.5
custom_fonts/font = SubResource( 8 )
text = "no server found"

[connection signal="button_up" from="VBoxContainer/TryAgain" to="." method="try_again_button_trigger"]
[connection signal="button_up" from="VBoxContainer/Back" to="." method="back_button_trigger"]
